# chatting

./: CMakeLists.txt
include/: chatclient.hpp  chatserver.hpp  messageprotocol.hpp  onlinenametable.hpp  server.hpp
src/: chatclient.cpp  chatserver.cpp  client.cpp  messageprotocol.cpp  onlinenametable.cpp  server.cpp
tests/: testmessagebody.cpp  testmessagetype.cpp
